# ioc-container-sample

./: LICENSE  meson.build
src/: Container.vala  IPaymentsService.vala  PayPalService.vala  PaymentsManager.vala  Program.vala  meson.build
